trab/2/test/should_succeed/generico1.py
a=5
if a > 1:
   print(a)
