trab/2/test/should_fail/sintatico05.py
def funcao(a,b):
    a = 5
b = 2
    c = 4
